--- a/frontend/src/langs/zh-cn.json
+++ b/frontend/src/langs/zh-cn.json
@@ -167,10 +167,8 @@
   "ribbon": {
     "server": "服务器",
     "browser": "数据浏览",
-    "log": "日志",
-    "wechat_official": "微信公众号",
-    "follow_x": "关注我的\uD835\uDD4F",
-    "github": "Github"
+    "log": "日志"
+    
   },
   "dialogue": {
     "close_confirm": "是否关闭此连接（{name}）",
