--- a/frontend/src/langs/en-us.json
+++ b/frontend/src/langs/en-us.json
@@ -167,10 +167,8 @@
   "ribbon": {
     "server": "Server",
     "browser": "Data Browser",
-    "log": "Log",
-    "wechat_official": "WeChat Official Account",
-    "follow_x": "Follow \uD835\uDD4F",
-    "github": "Github"
+    "log": "Log"
+  
   },
   "dialogue": {
     "close_confirm": "Close this connection ({name})?",
